--- a/Final/1.in
+++ b/Final/1.in
@@ -2,4 +2,12 @@ print-num (- 2 1)
 print-num (+ 2 1)
 print-num (* 2 3 4)
 print-num (/ 10 5)
-print-num ( mod 8 5)
+print-num (> 10 5)
+print-num (= 10 10 10)
+print-bool(or #f #f)
+print-bool(or #f #t)
+print-bool(or #f #f #t)
+(define x 5)
+print-num (+ x 1)
+print-num (if #t 1 2)
+print-num (if #f 1 2)
